[tool.poetry]
name = "poetry add django"
version = "0.1.0"
description = ""
authors = ["DongUk1995"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
black = "^22.10.0"
django = "^4.1.2"
pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
