[tool.poetry]
name = "mc-air-bnb-cord"
version = "0.1.0"
description = ""
authors = ["김동욱 <105752138+DongUk1995@users.noreply.github.com>"]
license = "mit"
readme = "README.md"
packages = [{include = "mc_air_bnb_cord"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
lsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
